Fixed logo size on mobile

--- a/main.css
+++ b/main.css
@@ -41,6 +41,9 @@ p, h1, h2, h3, h4, h5, h6, li, ul {
   margin-bottom: 2rem; }
   #header img {
     width: 30rem; }
+  @media only screen and (max-width: 400px) {
+    #header img {
+      width: 20rem; } }
 
 #options {
   background: black;
