--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,4 +4,9 @@
         width: 30rem;
     }
     margin-bottom: 2rem;
+    @include bp(400px){
+        img{
+            width: 20rem;
+        }   
+    }
 }
