--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,7 +15,11 @@ $text-shadow: 0px 0px 1px black, 0px 0px 2px black, 0px 0px 3px black;
 @mixin t($property){
     transition: $property $speed;
 }
-
+@mixin bp($size){
+    @media only screen and (max-width: $size){
+        @content;
+    }
+}
 
 body{
     margin: 0;
